deploy/k8s-ack-prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek-harness
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: deepseek-harness-gateway
  hostnames:
    - dsh.ktyun.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: deepseek-harness
          port: 80
          weight: 100
